--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body * + * {
   display: block;
   font-weight: bold;
   font-family: Satisfy, sans-serif;
+  font-size: 1.25em;
 }
 
 [contenteditable] {
@@ -35,8 +36,10 @@ body * + * {
   border: 0;
   padding: 0.5em;
   background: green;
+  display: inline-block;
 }
 
 .stars > * {
   color: #ccc;
+  font-size: 2em;
 }
