--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,16 @@ body * + * {
   display: inline-block;
 }
 
+.stars {
+  letter-spacing: -4px;
+}
+
 .stars > * {
   color: #ccc;
   font-size: 2em;
   line-height: 1;
   cursor: pointer;
+  padding: 0 0.25em;
 }
 
 .stars:hover > * {
