--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body * + * {
   font-size: 2em;
   line-height: 1;
   cursor: pointer;
-  padding: 0 0.25em;
+  padding: 0 0.25em 0 0;
 }
 
 .stars:hover > * {
