--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body * + * {
 
 .stars {
   letter-spacing: -4px;
+  display: inline-block;
 }
 
 .stars > * {
@@ -52,8 +53,8 @@ body * + * {
   padding: 0 0.25em 0 0;
 }
 
-.stars:hover > * {
-  color: green; 
+.stars:hover > *, .stars > .selected {
+  color: green;
 }
 
 .stars > *:hover ~ * {
