--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ body * + * {
   padding: 0 0.25em 0 0;
 }
 
+.stars:hover > * {
+  text-shadow: 0 0 0 3px yellow;
+}
+
 .stars:hover > *, .stars > .selected {
   color: green;
 }
