--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,10 @@ body * + * {
  padding: 1em;
  text-align: center;
  font-weight: bold;
+ color: #fff;
+ color: #2D9F09;
 }
 
 .submitted::after {
  content: '\0020\2713'; 
-}
-}
 }
