--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Satisfy);
+@import url(https://fonts.googlefapis.com/css?family=Satisfy);
 
 body {
   max-width: 800px;
